@@ -1,6 +1,7 @@
 This file documents the revision history for mod_gearman.
 
 0.8    
+          - added send_multi
           - fixed checks with popen/exec
 
 0.7    Wed Nov  3 14:01:23 CET 2010
